update get user
